--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,28 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <button ion-item (click)="openPage(mainPage)">
+          Ver Perfil
+        </button>
+        <button ion-item (click)="openPage(editProfilePage)">
+          Editar Perfil
+        </button>
+        <button ion-item (click)="openPage(transactionsPage)">
+          Transações
+        </button>
+        <button ion-item (click)="openPage(eventsPage)">
+          Transferência
+        </button>
+        <button ion-item (click)="closeMenu()">
+          Sair
+        </button>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  
+  <ion-nav id="nav" #content [root]="rootPage"></ion-nav>
