--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,11 +6,8 @@
     </ion-header>
     <ion-content>
       <ion-list>
-        <button ion-item menuClose (click)="openPage(mainPage)">
-          Ver Perfil
-        </button>
         <button ion-item menuClose (click)="openPage(editProfilePage)">
-          Editar Perfil
+          Perfil
         </button>
         <button ion-item menuClose (click)="openPage(transactionsPage)">
           Transações
