Adding maxlength to edit and create client

--- a/src/components/create-client/create-client.html
+++ b/src/components/create-client/create-client.html
@@ -11,7 +11,7 @@
     <ion-list>
       <ion-item>
         <ion-label floating>Nome</ion-label>
-        <ion-input type="text" [(ngModel)]="client.name"></ion-input>
+        <ion-input type="text" maxlength="23" [(ngModel)]="client.name"></ion-input>
       </ion-item>
   
       <ion-item>
