--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,25 +34,26 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #76d8af,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  gray:       #a5a1a1
 );
 
 
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
-
+$menu-ios-background: linear-gradient(#76d8af, #76d8af, #76d8af, #76d8af, #9beecb, #b7eed7, #fff);
 
 
 
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
-
+$menu-md-background: linear-gradient(#76d8af, #76d8af, #76d8af, #76d8af, #9beecb, #b7eed7, #fff);
 
 
 
