--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,17 @@
 page-home {
+  h1 {
+    padding-top: 50px;
+  }
 
+  h5 {
+    padding-top: 20px;
+  }
+
+  ion-list {
+    padding-top: 90px;
+  }
+
+  .button-top {
+    margin-top: 30px;
+  }
 }
