Improving transaction lists

--- a/src/components/transfer-info/transfer-info.html
+++ b/src/components/transfer-info/transfer-info.html
@@ -3,8 +3,7 @@
     <ion-title>Informações</ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
-        <span ion-text showWhen="ios">Fechar</span>
-        <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
+        <span ion-text>Fechar</span>
       </button>
     </ion-buttons>
   </ion-toolbar>
