Improving message error when 422

--- a/src/components/activate-user/activate-user.html
+++ b/src/components/activate-user/activate-user.html
@@ -1,6 +1,11 @@
-<ion-header>
+<ion-header padding-top>
   <ion-toolbar color="primary">
     <ion-title>Ativar Usuário</ion-title>
+    <ion-buttons start>
+      <button ion-button (click)="dismiss()">
+        <span ion-text>Fechar</span>
+      </button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
