--- a/src/components/create-client/create-client.html
+++ b/src/components/create-client/create-client.html
@@ -1,10 +1,13 @@
 <ion-header padding-top>
-
-    <ion-navbar color="primary">
-      <ion-title>Criar Cliente</ion-title>
-    </ion-navbar>
-  
-  </ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Criar Client</ion-title>
+    <ion-buttons start>
+      <button ion-button (click)="dismiss()">
+        <span ion-text>Fechar</span>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
   
   
   <ion-content padding>
