--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -10,4 +10,10 @@ page-main {
   .icon-title {
     font-size: 11px;
   }
+
+  #notifications-badge {
+    position: absolute;
+    top: -3px;
+    right: -3px;
+  }
 }
